--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ musicbot = "0.26.0-SNAPSHOT"
 m3uparser = "1.1.0"
 ktor.strictly = "[1.4, 1.5)"
 junit.strictly = "[5.7, 5.8)"
-moshi = "1.9.2"
+moshi = "1.12.0"
 
 # Plugins
 ktlint = "0.39.0"
@@ -57,7 +57,7 @@ version.ref = "moshi"
 [libraries.unixsocket]
 group = "com.kohlschutter.junixsocket"
 name = "junixsocket-core"
-version = "2.3.2"
+version.strictly = "[2.3, 2.4)"
 
 [libraries.nuprocess]
 group = "com.zaxxer"
@@ -82,7 +82,7 @@ version = "3.0.0"
 [libraries.youtube]
 group = "com.google.apis"
 name = "google-api-services-youtube"
-version = "v3-rev20200109-1.30.8"
+version = "v3-rev20210410-1.31.0"
 
 [libraries.caffeine]
 group = "com.github.ben-manes.caffeine"
